# note-taker

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  exports.rs  lib.rs  main.rs  meeting.rs  openai_credentials.rs  openai_transcription.rs  process.rs  rechunk.rs  recording.rs  sidecar.rs  smart_chunks.rs  storage.rs  summary.rs  task_control.rs  text_normalization.rs  updates.rs
